tests/data-clumps/test-cases/parameter-parameter/simple-less-variables/negative/typescript/source/AppointmentScheduler.ts
export class AppointmentScheduler {
  schedule(patientId: number, doctorId: number): void {
    console.log(`Scheduling appointment for patient ${patientId} with doctor ${doctorId}`);
  }
}
